[package]
name = "codelim"
version = "0.1.0"
edition = "2021"
description = "Minimal local Codex quota checker"
license = "MIT"
homepage = "https://github.com/stellarjmr/codelim"
repository = "https://github.com/stellarjmr/codelim"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
